--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -52,3 +52,11 @@ jobs:
       - name: Build and install PBAT Python bindings with CUDA
         run: |
           pip install . --config-settings=cmake.args="--preset=pip-local-cuda" --config-settings=build.tool-args="${{ matrix.build_tool_args }}" -v
+
+      - name: Run PBAT Python toolkit and inspect modules
+        run: |
+          python -c "import pbatoolkit as pbat; \
+                     help(pbat.fem); \
+                     help(pbat.geometry); \
+                     help(pbat.profiling); \
+                     help(pbat.math.linalg)"
