--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -15,11 +15,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-24.04
-            build_tool_args: -j4
           - os: windows-2022
             build_tool_args: /p:CL_MPCount=4
-      max-parallel: 2
+      max-parallel: 1
 
     steps:
       - uses: actions/checkout@v4
@@ -41,13 +39,24 @@ jobs:
       - uses: Jimver/cuda-toolkit@v0.2.16
         id: cuda-toolkit
         with:
-          cuda: '12.5.0'
+          cuda: '12.6.0'
   
       - name: 'Check CUDA installation'
         run: |
             echo "CUDA Toolkit installed at ${{ steps.cuda-toolkit.outputs.cuda-path }}"
             echo "CUDA Version: ${{ steps.cuda-toolkit.outputs.cuda-version }}"
             nvcc --version
+            
+      - name: Copy CUDA MSBuildExtensions files to Visual Studio BuildCustomizations (Windows only)
+        if: runner.os == 'Windows'
+        run: |
+          $cudaVersion = "v12.6.0" # Set this to your CUDA version
+          $cudaPath = "${{ steps.cuda-toolkit.outputs.cuda-path }}"
+          $src = "$cudaPath\\extras\\visual_studio_integration\\MSBuildExtensions"
+          $dst = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\BuildTools\\MSBuild\\Microsoft\\VC\\v160\\BuildCustomizations"
+
+          echo "Copying CUDA MSBuildExtensions files from $src to $dst"
+          Copy-Item "$src\\*" -Destination $dst -Recurse -Force
 
       - name: Build and install PBAT Python bindings with CUDA
         run: |
