--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -15,11 +15,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-24.04
-            build_tool_args: -j4
           - os: windows-2022
             build_tool_args: /p:CL_MPCount=4
-      max-parallel: 2
+      max-parallel: 1
 
     steps:
       - uses: actions/checkout@v4
@@ -34,11 +32,6 @@ jobs:
           vcpkgDirectory: ${{ github.workspace }}/vcpkg
           vcpkgGitCommitId: 055721089e8037d4d617250814d11f881e557549
 
-      - name: Install cuda-api-wrappers via vcpkg
-        run: |
-          $vcpkg = "${{ github.workspace }}/vcpkg"
-          $vcpkg install cuda-api-wrappers
-
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
@@ -46,7 +39,7 @@ jobs:
       - uses: Jimver/cuda-toolkit@v0.2.16
         id: cuda-toolkit
         with:
-          cuda: '12.6.0'
+          cuda: '12.5.0'
 
       - name: 'Check CUDA installation'
         run: |
@@ -57,7 +50,7 @@ jobs:
       - name: Copy CUDA MSBuildExtensions files to Visual Studio BuildCustomizations (Windows only)
         if: runner.os == 'Windows'
         run: |
-          $cudaVersion = "v12.6.0" # Set this to your CUDA version
+          $cudaVersion = "v12.5.0"
           $cudaPath = "${{ steps.cuda-toolkit.outputs.cuda-path }}"
           $src = "$cudaPath\\extras\\visual_studio_integration\\MSBuildExtensions"
           $dst = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\BuildTools\\MSBuild\\Microsoft\\VC\\v160\\BuildCustomizations"
