--- a/source/pbat/math/linalg/CMakeLists.txt
+++ b/source/pbat/math/linalg/CMakeLists.txt
@@ -5,9 +5,13 @@ target_sources(PhysicsBasedAnimationToolkit_PhysicsBasedAnimationToolkit
     "Cholmod.h"
     "LinAlg.h"
     "SparsityPattern.h"
+    "PGS.h"
+    "PGSSM.h"
 )
 target_sources(PhysicsBasedAnimationToolkit_PhysicsBasedAnimationToolkit
     PRIVATE
     "Cholmod.cpp"
     "SparsityPattern.cpp"
+    "PGS.cpp"
+    "PGSSM.cpp"
 )
